reconnect/styles/Home.module.css
.container {
  display: flex;
  justify-content: top;
  margin: 1rem;
}

.main {
  min-height: 100vh;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: top;
  align-items: center;
  margin-top: 1rem;
}
/*
.footer {
  display: flex;
  flex: 1;
  padding: 2rem 0;
  border-top: 1px solid #eaeaea;
  justify-content: center;
  align-items: center;
}

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
} */

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 30px;
}

.title,
.description {
  text-align: center;
}

/* .description {
  margin: 4rem 0;
  line-height: 1.5;
  font-size: 1.5rem;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
}

.card {
  margin: 1rem;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
  max-width: 300px;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h2 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

@media (prefers-color-scheme: dark) {
  .card,
  .footer {
    border-color: #222;
  }
  .code {
    background: #111;
  }
  .logo img {
    filter: invert(1);
  }
}
 */

/*Start of mood questions styling*/
.moodQuestionContainer {
  display: flex;
  align-items: center;
  background-color: #ffffff;
  box-shadow: 0px 5px 5px #cbe2ef;
  border-radius: 15px;
  padding: 2vh;
}

.moodStateContainer {
  padding: 2vh;
  padding-bottom: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.mascotSmall {
  /*   position: relative;
  left: 72.22%;
  right: 8.46%;
  top: 6.18%;
  bottom: 91.15%; */
}

/*Start of main page gratitude styling*/
.gratitudeBox {
  margin: 0;
  padding-right: 10vw;
}
.gratitudeContainer {
  display: flex;
  background: #cbe2ef;
  border-radius: 15px;
  margin-top: 21px;
  max-height: 10rem;
}

/*Start of Tab Bar styling*/

.bottomNav {
  width: 100%;
  height: 50px;
  position: fixed;
  bottom: 0;
  border-top: 1px solid var(--grey-color);
  z-index: 3;
  background-color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
}
.bnTab {
  width: 25%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.seeAll{
  position: relative;
  margin-top:15vh;
  margin-bottom: 1vh;
  margin-left: -10vh;
}

.quoteBox{
  margin-top:21px;
  background: #5584B1;
  border-radius: 15px;
  margin-bottom:21px;
}
.quoteText{
  color:white;
  padding:2vh;
  margin:0
}
.quoteAuthor{
  color:white;
  margin: 1vh;
  padding-bottom: 1vh;
  padding-left: 1vh;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}
.challenges{
  display:flex;
  justify-content: space-around;
}

